# handy

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  Makefile  README-en.md  README.md  build_config  build_detect_platform  doc-en.md  doc.md
.travis/: check-git-clang-format.sh  git-clang-format
10m/: 10m-cli.cc  10m-svr.cc  Makefile
1kw/: 1kw-cli.cc  1kw-svr.cc
examples/: 1kw-cli.cc  1kw-cli.py  1kw-svr.cc  1kw-svr.py  Makefile  chat.cc  codec-cli.cc  codec-svr.cc  daemon.cc  daemon.conf  echo.cc  echo_cli.cc  hsha.cc  http-echo.cc  http-hello.cc  http1.cc  idle-close.cc  log-bench.cc  log.cc  msgs-cli.cc  msgs-svr.cc  reconnect.cc  safe-close.cc  stat.cc  stat1.cc  timer.cc  tiny-echo.cc  udp-cli.cc  udp-hsha.cc  udp-svr.cc  write-on-empty.cc
handy/: Makefile  codec.cc  codec.h  conf.cc  conf.h  conn.cc  conn.h  conn_pool.cpp  conn_pool.h  daemon.cc  daemon.h  event_base.cc  event_base.h  file.cc  file.h  handy-imp.h  handy.cc  handy.h  handy_imp.h  http.cc  http.h  logging.cc  logging.h  net.cc  net.h  poller.cc  poller.h  port_posix.cc  port_posix.h  slice.h  stat-server.cc  stat-server.h  stat-svr.cc  stat-svr.h  status.h  thread_util.cc  thread_util.h  threads.cc  threads.h  udp.cc  (+3 more)
protobuf/: Makefile  msg.proto  proto_msg.cc  proto_msg.h  test.cc
raw-examples/: Makefile  epoll-et.cc  epoll.cc  kqueue.cc
ssl/: Makefile  README  https-svr.cc  server.pem  ssl-cli.cc  ssl-conn.cc  ssl-conn.h  ssl-svr.cc  ssl_conn.cc  ssl_conn.h
test/: conf.ut.cc  handy.ut.cc  tcpcli.ut.cc  test_harness.cc  test_harness.h  threads.ut.cc  ut.cc  util.ut.cc
test/files/: bad_comment.ini  bad_multi.ini  bad_section.ini  multi_line.ini  normal.ini  user_error.ini
